# ExternEVM

./: .gitmodules  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml  contracts.yml  docker.yml
config/: genesis.json  jwt.hex
consensus/: Cargo.toml
consensus/src/: consensus.rs  engine_api.rs  jwt.rs  main.rs  round_robin.rs  types.rs
contracts/: foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/src/: ExternAPI.sol  ExternApiDemo.sol  RWAReserveDemo.sol
contracts/test/: ExternApiDemo.t.sol
crates/externevm-precompile/: Cargo.toml
crates/externevm-precompile/src/: abi.rs  api_call.rs  api_config.rs  errors.rs  lib.rs
docker/: entrypoint.sh  reth.Dockerfile
docs/: api-precompile.md  architecture.md  cloud-deployment.md  consensus-v2.md  direct-api-mode.md  roadmap.md  solc-plan.md
scripts/: deploy-demo.sh  deploy-tunnel.sh  health-check.sh  metamask-network.md  run-local.sh
