[package]
name = "externevm-consensus"
version = "0.1.0"
edition = "2021"
description = "ExternEVM Consensus Layer — Round-Robin PoA via Engine API"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
